--- a/03-bootstrap-kategorisi/bolum-sonu-calimasi/css/medium.css
+++ b/03-bootstrap-kategorisi/bolum-sonu-calimasi/css/medium.css
@@ -1,7 +1,12 @@
+body {
+    font-family: 'PT Serif', serif;
+}
+
 .bg-blue {
-    background-color: C4E2FF;
+    background-color: #C4E2FF;
 }
 
 .border-bottom-dark {
     border-bottom: 1px solid rgba(41, 41, 41, 1);
 }
+
